--- a/theme/src/scss/_templates.scss
+++ b/theme/src/scss/_templates.scss
@@ -650,8 +650,8 @@ $violet-primary: #673EAC;
         @apply inline-block font-body text-gray-700 rounded-md;
         font-size: 0.7rem;
         padding: 2px 8px;
-        background-color: #F4F0FA;
-        border: 0.5px solid #E8E0F4;
+        background-color: #FAF9FD;
+        border: 0.5px solid #D7CDEA;
     }
 
     .event-card-cta {
